# cinepi-raw

./: CMakeLists.txt  README.md  meson.build  run-raw.sh
_files_to_home_folder/: compile-raw.sh  post-processing.json
_system-files/: compile-gui.sh
cinepi/: cinepi_controller.cpp  cinepi_controller.hpp  cinepi_raw.cpp  cinepi_recorder.hpp  cinepi_sound.cpp  cinepi_state.hpp  dng_encoder.cpp  dng_encoder.hpp  lj92.h  meson.build  mjpegStreamStage.cpp  raw_options.hpp  utils.cpp  utils.hpp
core/: libcamera_app.cpp  libcamera_app.hpp  rpicam_app.cpp
post_processing_stages/: meson.build  networkPreviewStage.cpp
